--- a/about_me.html
+++ b/about_me.html
@@ -5,7 +5,7 @@
     
 </head>
     <body> 
-        <h1>Leslie Wiegle</h1>
+        <h1>Leslie R. Wiegle</h1>
         <img src="profilepic.jpg">
 
         <p> Leslie is originally from Pennsylvania, and currently works in Wilmington, NC as a project manager for dboy creative studios. She is a geek with creative tendencies. Whiskey is her spirit animal.</p>
